--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bevry/pluginloader",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A class for loading, verifying, and creating plugins. Used by DocPad for years.",
   "homepage": "https://github.com/bevry/pluginloader",
   "license": "MIT",
@@ -85,8 +85,8 @@
   "dependencies": {
     "editions": "^2.0.2",
     "errlop": "^1.0.3",
-    "safefs": "^4.1.0",
-    "semver": "^5.5.1"
+    "semver": "^5.5.1",
+    "typechecker": "^4.5.0"
   },
   "devDependencies": {
     "assert-helpers": "^4.5.1",
