--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bevry/pluginloader",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "A class for loading, verifying, and creating plugins. Used by DocPad for years.",
   "homepage": "https://github.com/bevry/pluginloader",
   "license": "MIT",
@@ -19,22 +19,30 @@
       "daviddm",
       "daviddmdev",
       "---",
+      "githubsponsors",
       "patreon",
-      "opencollective",
       "flattr",
+      "liberapay",
+      "buymeacoffee",
+      "opencollective",
+      "crypto",
       "paypal",
-      "bitcoin",
       "wishlist"
     ],
     "config": {
-      "patreonUsername": "bevry",
-      "opencollectiveUsername": "bevry",
+      "githubSponsorsUsername": "balupton",
+      "buymeacoffeeUsername": "balupton",
+      "cryptoURL": "https://bevry.me/crypto",
       "flattrUsername": "balupton",
+      "liberapayUsername": "bevry",
+      "opencollectiveUsername": "bevry",
+      "patreonUsername": "bevry",
       "paypalURL": "https://bevry.me/paypal",
-      "bitcoinURL": "https://bevry.me/bitcoin",
-      "wishlistURL": "https://bevry.me/wishlist"
+      "wishlistURL": "https://bevry.me/wishlist",
+      "travisTLD": "com"
     }
   },
+  "funding": "https://bevry.me/fund",
   "author": "2018+ Benjamin Lupton <b@lupton.cc>",
   "maintainers": [
     "Benjamin Lupton <b@lupton.cc>"
@@ -50,63 +58,73 @@
     "url": "https://github.com/bevry/pluginloader.git"
   },
   "engines": {
-    "node": ">=0.10"
+    "node": ">=8"
   },
   "editions": [
     {
-      "description": "esnext source code with require for modules",
+      "description": "typescript source code with import for modules",
       "directory": "source",
-      "entry": "index.js",
-      "syntaxes": [
-        "javascript",
-        "esnext",
-        "require"
+      "entry": "index.ts",
+      "tags": [
+        "typescript",
+        "import"
       ],
-      "engines": {
-        "node": ">=6",
-        "browsers": false
-      }
+      "engines": false
     },
     {
-      "description": "esnext compiled for node.js >=0.10 with require for modules",
-      "directory": "edition-node-0.10",
+      "description": "typescript compiled for node.js 12 with require for modules",
+      "directory": "edition-node-12",
       "entry": "index.js",
-      "syntaxes": [
+      "tags": [
         "javascript",
         "require"
       ],
       "engines": {
-        "node": "0.10 || 0.12 || 4 || 6 || 8 || 10",
+        "node": "8 || 10 || 12",
         "browsers": false
       }
     }
   ],
-  "main": "index.js",
+  "types": "source/index.ts",
+  "type": "commonjs",
+  "main": "edition-node-12/index.js",
   "dependencies": {
-    "editions": "^2.0.2",
-    "errlop": "^1.0.3",
-    "semver": "^5.5.1",
-    "typechecker": "^4.6.0"
+    "errlop": "^1.6.0",
+    "semver": "^6.3.0",
+    "typechecker": "^6.2.0"
   },
   "devDependencies": {
-    "assert-helpers": "^4.5.1",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "documentation": "^8.1.2",
-    "eslint": "^5.5.0",
-    "joe": "^2.0.2",
-    "joe-reporter-console": "^2.0.2",
-    "projectz": "^1.4.0",
-    "surge": "^0.20.1",
-    "valid-directory": "^1.0.0"
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+    "@babel/preset-env": "^7.7.5",
+    "@babel/preset-typescript": "^7.7.4",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "assert-helpers": "^5.7.0",
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "eslint": "^6.7.2",
+    "eslint-config-bevry": "^2.2.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "kava": "^4.3.0",
+    "prettier": "^1.19.1",
+    "projectz": "^1.15.0",
+    "surge": "^0.21.3",
+    "typedoc": "^0.15.3",
+    "typescript": "^3.7.3",
+    "valid-directory": "^1.5.0"
   },
   "scripts": {
-    "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out",
-    "our:compile": "npm run our:compile:edition-node-0.10",
-    "our:compile:edition-node-0.10": "env BABEL_ENV=edition-node-0.10 babel --out-dir ./edition-node-0.10 ./source",
+    "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
+    "our:compile": "npm run our:compile:edition-node-12",
+    "our:compile:edition-node-12": "env BABEL_ENV=edition-node-12 babel --extensions \".ts,.tsx\" --out-dir ./edition-node-12 ./source",
     "our:deploy": "echo no need for this project",
     "our:meta": "npm run our:meta:docs && npm run our:meta:projectz",
-    "our:meta:docs": "documentation build -f html -o ./docs -g --shallow ./source/**.js",
+    "our:meta:docs": "npm run our:meta:docs:typedoc",
+    "our:meta:docs:typedoc": "rm -Rf ./docs && typedoc --mode file --exclude '**/+(*test*|node_modules)' --excludeExternals --name \"$npm_package_name\" --readme ./README.md --out ./docs ./source",
     "our:meta:projectz": "projectz compile",
     "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
     "our:release:check-changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
@@ -114,26 +132,46 @@
     "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
     "our:release:push": "git push origin master && git push origin --tags",
     "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
-    "our:setup": "npm run our:setup:npm",
-    "our:setup:npm": "npm install",
+    "our:setup": "npm run our:setup:install",
+    "our:setup:install": "npm install",
     "our:test": "npm run our:verify && npm test",
-    "our:verify": "npm run our:verify:directory && npm run our:verify:eslint",
+    "our:verify": "npm run our:verify:directory && npm run our:verify:eslint && npm run our:verify:prettier && npm run our:verify:typescript",
     "our:verify:directory": "npx valid-directory",
-    "our:verify:eslint": "eslint --fix ./source",
-    "test": "node --harmony ./test.js --joe-reporter=console"
+    "our:verify:eslint": "eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
+    "our:verify:prettier": "prettier --write ./source/**",
+    "our:verify:typescript": "tsc --noEmit --project tsconfig.json",
+    "test": "node ./edition-node-12/test.js"
+  },
+  "eslintConfig": {
+    "extends": [
+      "bevry"
+    ]
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   },
   "babel": {
     "env": {
-      "edition-node-0.10": {
+      "edition-node-12": {
+        "sourceType": "module",
         "presets": [
           [
-            "env",
+            "@babel/preset-env",
             {
               "targets": {
-                "node": "0.10"
-              }
+                "node": "12"
+              },
+              "modules": "commonjs"
             }
-          ]
+          ],
+          "@babel/preset-typescript"
+        ],
+        "plugins": [
+          "@babel/proposal-object-rest-spread",
+          "@babel/plugin-proposal-optional-chaining",
+          "@babel/proposal-class-properties",
+          "add-module-exports"
         ]
       }
     }
