--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bevry/pluginloader",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "A class for loading, verifying, and creating plugins. Used by DocPad for years.",
   "homepage": "https://github.com/bevry/pluginloader",
   "license": "MIT",
@@ -9,6 +9,7 @@
     "docpad",
     "export-default",
     "loader",
+    "node",
     "plugin",
     "plugins",
     "typed",
@@ -43,7 +44,11 @@
       "patreonUsername": "bevry",
       "paypalURL": "https://bevry.me/paypal",
       "wishlistURL": "https://bevry.me/wishlist",
-      "travisTLD": "com"
+      "travisTLD": "com",
+      "githubUsername": "bevry",
+      "githubRepository": "pluginloader",
+      "githubSlug": "bevry/pluginloader",
+      "npmPackageName": "@bevry/pluginloader"
     }
   },
   "funding": "https://bevry.me/fund",
@@ -52,7 +57,7 @@
     "Benjamin Lupton <b@lupton.cc>"
   ],
   "contributors": [
-    "Benjamin Lupton (http://balupton.com)"
+    "Benjamin Lupton (https://github.com/balupton)"
   ],
   "bugs": {
     "url": "https://github.com/bevry/pluginloader/issues"
@@ -62,7 +67,7 @@
     "url": "https://github.com/bevry/pluginloader.git"
   },
   "engines": {
-    "node": ">=8"
+    "node": ">=10"
   },
   "editions": [
     {
@@ -85,7 +90,7 @@
         "require"
       ],
       "engines": {
-        "node": "8 || 10 || 12 || 13"
+        "node": "10 || 12 || 13 || 14"
       }
     }
   ],
@@ -93,24 +98,25 @@
   "type": "commonjs",
   "main": "edition-esnext/index.js",
   "dependencies": {
-    "errlop": "^2.0.0",
-    "semver": "^7.1.1",
-    "typechecker": "^6.3.0"
+    "errlop": "^2.2.0",
+    "semver": "^7.3.2",
+    "typechecker": "^6.4.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
-    "assert-helpers": "^5.8.0",
-    "eslint": "^6.7.2",
-    "eslint-config-bevry": "^2.3.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "kava": "^4.4.0",
-    "prettier": "^1.19.1",
-    "projectz": "^1.19.0",
+    "@bevry/update-contributors": "^1.4.0",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "assert-helpers": "^6.2.0",
+    "eslint": "^7.0.0",
+    "eslint-config-bevry": "^3.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "kava": "^5.0.0",
+    "prettier": "^2.0.5",
+    "projectz": "^2.0.0",
     "surge": "^0.21.3",
-    "typedoc": "^0.15.5",
-    "typescript": "^3.7.3",
+    "typedoc": "^0.17.6",
+    "typescript": "^3.8.3",
     "valid-directory": "^1.6.0"
   },
   "scripts": {
@@ -118,10 +124,11 @@
     "our:compile": "npm run our:compile:edition-esnext",
     "our:compile:edition-esnext": "tsc --module commonjs --target ESNext --outDir ./edition-esnext --project tsconfig.json && test -d edition-esnext/source && ( mv edition-esnext/source edition-temp && rm -Rf edition-esnext && mv edition-temp edition-esnext ) || true",
     "our:deploy": "echo no need for this project",
-    "our:meta": "npm run our:meta:docs && npm run our:meta:projectz",
+    "our:meta": "npm run our:meta:contributors && npm run our:meta:docs && npm run our:meta:projectz",
+    "our:meta:contributors": "npx @bevry/update-contributors",
     "our:meta:docs": "npm run our:meta:docs:typedoc",
-    "our:meta:docs:typedoc": "rm -Rf ./docs && typedoc --mode file --exclude '**/+(*test*|node_modules)' --excludeExternals --name \"$npm_package_name\" --readme ./README.md --out ./docs ./source",
-    "our:meta:projectz": "projectz compile",
+    "our:meta:docs:typedoc": "rm -Rf ./docs && npx typedoc --mode file --exclude '**/+(*test*|node_modules)' --excludeExternals --name \"$npm_package_name\" --readme ./README.md --out ./docs ./source",
+    "our:meta:projectz": "npx projectz compile",
     "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
     "our:release:check-changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
     "our:release:check-dirty": "git diff --exit-code",
@@ -132,10 +139,10 @@
     "our:setup:install": "npm install",
     "our:test": "npm run our:verify && npm test",
     "our:verify": "npm run our:verify:directory && npm run our:verify:eslint && npm run our:verify:prettier && npm run our:verify:typescript",
-    "our:verify:directory": "valid-directory",
-    "our:verify:eslint": "eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
-    "our:verify:prettier": "prettier --write ./source/**",
-    "our:verify:typescript": "tsc --noEmit --project tsconfig.json",
+    "our:verify:directory": "npx valid-directory",
+    "our:verify:eslint": "npx eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
+    "our:verify:prettier": "npx prettier --write .",
+    "our:verify:typescript": "npx tsc --noEmit --project tsconfig.json",
     "test": "node ./edition-esnext/test.js"
   },
   "eslintConfig": {
