--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@bevry/pluginloader",
-  "version": "4.11.0",
+  "version": "4.12.0",
   "description": "A class for loading, verifying, and creating plugins. Used by DocPad for years.",
   "homepage": "https://github.com/bevry/pluginloader",
-  "license": "MIT",
+  "license": "Artistic-2.0",
   "keywords": [
     "bevry",
     "docpad",
-    "export-default",
+    "es2021",
+    "es2022",
     "loader",
     "node",
     "plugin",
@@ -18,24 +19,26 @@
   ],
   "badges": {
     "list": [
-      "travisci",
+      "githubworkflow",
       "npmversion",
       "npmdownloads",
-      "daviddm",
-      "daviddmdev",
       "---",
       "githubsponsors",
+      "thanksdev",
       "patreon",
-      "flattr",
       "liberapay",
       "buymeacoffee",
       "opencollective",
       "crypto",
       "paypal",
-      "wishlist"
+      "---",
+      "discord",
+      "twitch"
     ],
     "config": {
+      "githubWorkflow": "bevry",
       "githubSponsorsUsername": "balupton",
+      "thanksdevGithubUsername": "bevry",
       "buymeacoffeeUsername": "balupton",
       "cryptoURL": "https://bevry.me/crypto",
       "flattrUsername": "balupton",
@@ -44,7 +47,9 @@
       "patreonUsername": "bevry",
       "paypalURL": "https://bevry.me/paypal",
       "wishlistURL": "https://bevry.me/wishlist",
-      "travisTLD": "com",
+      "discordServerID": "1147436445783560193",
+      "discordServerInvite": "nQuXddV7VP",
+      "twitchUsername": "balupton",
       "githubUsername": "bevry",
       "githubRepository": "pluginloader",
       "githubSlug": "bevry/pluginloader",
@@ -75,89 +80,89 @@
       "directory": "source",
       "entry": "index.ts",
       "tags": [
+        "source",
         "typescript",
         "import"
       ],
       "engines": false
     },
     {
-      "description": "TypeScript compiled against ESNext for Node.js 10 || 12 || 13 || 14 with Require for modules",
-      "directory": "edition-esnext",
+      "description": "TypeScript compiled against ES2022 for Node.js 12 || 14 || 16 || 18 || 20 || 21 with Require for modules",
+      "directory": "edition-es2022",
       "entry": "index.js",
       "tags": [
+        "compiled",
         "javascript",
-        "esnext",
+        "es2022",
         "require"
       ],
       "engines": {
-        "node": "10 || 12 || 13 || 14"
+        "node": "12 || 14 || 16 || 18 || 20 || 21",
+        "browsers": false
       }
     },
     {
-      "description": "TypeScript compiled against ESNext for Node.js with Import for modules",
-      "directory": "edition-node-esm",
+      "description": "TypeScript compiled against ES2021 for Node.js 10 || 12 || 14 || 16 || 18 || 20 || 21 with Require for modules",
+      "directory": "edition-es2021",
       "entry": "index.js",
       "tags": [
+        "compiled",
         "javascript",
-        "import"
+        "es2021",
+        "require"
       ],
       "engines": {
-        "node": true,
+        "node": "10 || 12 || 14 || 16 || 18 || 20 || 21",
         "browsers": false
       }
     }
   ],
   "types": "./compiled-types/",
   "type": "module",
-  "main": "edition-esnext/index.js",
-  "exports": {
-    "node": {
-      "import": "./edition-node-esm/index.js",
-      "require": "./edition-esnext/index.js"
-    }
-  },
+  "main": "index.cjs",
   "dependencies": {
-    "errlop": "^3.16.0",
-    "semver": "^7.3.2",
-    "typechecker": "^7.13.0"
+    "editions": "^6.13.0",
+    "errlop": "^7.2.0",
+    "typechecker": "^8.2.0",
+    "version-range": "^4.2.0"
   },
   "devDependencies": {
-    "@bevry/update-contributors": "^1.15.0",
-    "@typescript-eslint/eslint-plugin": "^4.0.0",
-    "@typescript-eslint/parser": "^3.9.1",
-    "assert-helpers": "^7.0.1",
-    "eslint": "^7.7.0",
-    "eslint-config-bevry": "^3.19.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "kava": "^5.11.0",
-    "make-deno-edition": "^1.0.0",
-    "prettier": "^2.0.5",
-    "projectz": "^2.14.0",
-    "surge": "^0.21.6",
-    "typedoc": "^0.19.1",
-    "typescript": "^4.0.2",
-    "valid-directory": "^3.0.0"
+    "@bevry/update-contributors": "^1.23.0",
+    "@types/node": "^20.9.2",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "assert-helpers": "^11.4.0",
+    "eslint": "^8.54.0",
+    "eslint-config-bevry": "^5.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "filedirname": "^2.10.0",
+    "kava": "^7.2.0",
+    "prettier": "^3.1.0",
+    "projectz": "^3.2.0",
+    "surge": "^0.23.1",
+    "typedoc": "^0.25.3",
+    "typescript": "5.2.2",
+    "valid-directory": "^4.4.0"
   },
   "scripts": {
-    "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
-    "our:compile": "npm run our:compile:deno && npm run our:compile:edition-esnext && npm run our:compile:edition-node-esm && npm run our:compile:types",
-    "our:compile:deno": "make-deno-edition --attempt",
-    "our:compile:edition-esnext": "tsc --module commonjs --target ESNext --outDir ./edition-esnext --project tsconfig.json && ( test ! -d edition-esnext/source || ( mv edition-esnext/source edition-temp && rm -Rf edition-esnext && mv edition-temp edition-esnext ) ) && echo '{\"type\": \"commonjs\"}' > edition-esnext/package.json",
-    "our:compile:edition-node-esm": "tsc --module ESNext --target ESNext --outDir ./edition-node-esm --project tsconfig.json && ( test ! -d edition-node-esm/source || ( mv edition-node-esm/source edition-temp && rm -Rf edition-node-esm && mv edition-temp edition-node-esm ) ) && echo '{\"type\": \"module\"}' > edition-node-esm/package.json",
-    "our:compile:types": "tsc --project tsconfig.json --emitDeclarationOnly --declaration --declarationMap --declarationDir ./compiled-types && ( test ! -d compiled-types/source || ( mv compiled-types/source edition-temp && rm -Rf compiled-types && mv edition-temp compiled-types ) )",
-    "our:deploy": "echo no need for this project",
+    "our:clean": "rm -rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
+    "our:compile": "npm run our:compile:edition-es2021 && npm run our:compile:edition-es2022 && npm run our:compile:types",
+    "our:compile:edition-es2021": "tsc --module commonjs --target ES2021 --outDir ./edition-es2021 --project tsconfig.json && ( test ! -d edition-es2021/source || ( mv edition-es2021/source edition-temp && rm -rf edition-es2021 && mv edition-temp edition-es2021 ) ) && printf '%s' '{\"type\": \"commonjs\"}' > edition-es2021/package.json",
+    "our:compile:edition-es2022": "tsc --module commonjs --target ES2022 --outDir ./edition-es2022 --project tsconfig.json && ( test ! -d edition-es2022/source || ( mv edition-es2022/source edition-temp && rm -rf edition-es2022 && mv edition-temp edition-es2022 ) ) && printf '%s' '{\"type\": \"commonjs\"}' > edition-es2022/package.json",
+    "our:compile:types": "tsc --project tsconfig.json --emitDeclarationOnly --declaration --declarationMap --declarationDir ./compiled-types && ( test ! -d compiled-types/source || ( mv compiled-types/source edition-temp && rm -rf compiled-types && mv edition-temp compiled-types ) )",
+    "our:deploy": "printf '%s\n' 'no need for this project'",
     "our:meta": "npm run our:meta:contributors && npm run our:meta:docs && npm run our:meta:projectz",
     "our:meta:contributors": "update-contributors",
     "our:meta:docs": "npm run our:meta:docs:typedoc",
-    "our:meta:docs:typedoc": "rm -Rf ./docs && typedoc --mode file --exclude '**/+(*test*|node_modules)' --excludeExternals --name \"$npm_package_name\" --readme ./README.md --out ./docs ./source",
+    "our:meta:docs:typedoc": "rm -rf ./docs && typedoc --exclude '**/+(*test*|node_modules)' --excludeExternals --out ./docs ./source",
     "our:meta:projectz": "projectz compile",
     "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
-    "our:release:check-changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
+    "our:release:check-changelog": "cat ./HISTORY.md | grep \"v$npm_package_version\" || (printf '%s\n' \"add a changelog entry for v$npm_package_version\" && exit -1)",
     "our:release:check-dirty": "git diff --exit-code",
     "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
-    "our:release:push": "git push origin master && git push origin --tags",
-    "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
+    "our:release:push": "git push origin && git push origin --tags",
+    "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (printf '%s\n' 'proper changelog entry not found' && exit -1) && git tag \"v$npm_package_version\" -am \"$MESSAGE\"",
     "our:setup": "npm run our:setup:install",
     "our:setup:install": "npm install",
     "our:test": "npm run our:verify && npm test",
@@ -165,7 +170,7 @@
     "our:verify:directory": "valid-directory",
     "our:verify:eslint": "eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
     "our:verify:prettier": "prettier --write .",
-    "test": "node ./edition-esnext/test.js"
+    "test": "node ./test.cjs"
   },
   "eslintConfig": {
     "extends": [
@@ -174,6 +179,10 @@
   },
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "boundation": {
+    "sourceModule": false
   }
 }
