--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
     "maxNodeModuleJsDepth": 5,
     "moduleResolution": "Node",
     "strict": true,
-    "target": "ESNext",
-    "module": "ESNext"
+    "target": "ES2022"
   },
   "include": ["source"]
 }
